# newsletter-automation-healthcarewatch

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  GITHUB_SECRETS.md  GIT_PUSH_GUIDE.md  GIT_STATUS.md  INDEX.md  INSTALLATION.md  LICENSE  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  PROMPTS_GUIDE.md  QUICKSTART.md  README.md  START_HERE.md  STRUCTURE_SUMMARY.txt  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  run_help.bat  run_help.sh  setup.py
.github/workflows/: healthcare-watch.yml
config/: config.example.py  prompts.example.yaml  prompts.yaml
src/healthcare_watch/: __init__.py  healthcare_watch.py
